fixed text field spacing in /create

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -109,6 +109,14 @@ body {
   margin-right: 10px;
 }
 
+#text_field {
+  text-align: right;
+}
+
+#description_field {
+  text-align: left;
+}
+
 #myModal {
   padding-top: 200px;
 }
